update deep learning

--- a/deep-learning/感知机.md
+++ b/deep-learning/感知机.md
@@ -48,9 +48,10 @@ print(OR(0,0), OR(0,1), OR(1,0), OR(1,1))
 
 
 
-与门 与非门 或门
-[![EkH7MF.jpg](https://s2.ax1x.com/2019/04/22/EkH7MF.jpg)](https://imgchr.com/i/EkH7MF)
-异或门
+与门 与非门 或门<br>
+[![EkH7MF.jpg](https://s2.ax1x.com/2019/04/22/EkH7MF.jpg)](https://imgchr.com/i/EkH7MF)<br>
+
+异或门<br>
 [![EkHWan.jpg](https://s2.ax1x.com/2019/04/22/EkHWan.jpg)](https://imgchr.com/i/EkHWan)
 
 ```python
