--- a/frontend/freeCodeCamp/js/原型链.md
+++ b/frontend/freeCodeCamp/js/原型链.md
@@ -19,4 +19,9 @@ How is this useful? You may recall the `hasOwnProperty` method from a previous c
 let duck = new Bird("Donald");
 duck.hasOwnProperty("name"); // => true
 ```
-The `hasOwnProperty` method is defined in `Object.prototype`, which can be accessed by `Bird.prototype`, which can then be accessed by `duck`. This is an example of the **prototype chain**. In this `prototype chain`, `Bird` is the `supertype` for `duck`, while `duck` is the subtype. Object is a supertype for both Bird and duck. Object is a supertype for all objects in JavaScript. Therefore, any object can use the hasOwnProperty method.
+The `hasOwnProperty` method is defined in `Object.prototype`, which can be accessed by `Bird.prototype`, which can then be accessed by `duck`. This is an example of the **prototype chain**. In this `prototype chain`, `Bird` is the `supertype` for `duck`, while `duck` is the `subtype`. `Object` is a `supertype` for both `Bird` and `duck`. `Object` is a `supertype` for all objects in JavaScript. Therefore, any object can use the `hasOwnProperty` method.
+
+
+```
+Object.prototype.isPrototypeOf(xxx)  // 可以理解为 xxx是否是Object的原型的一部分
+```
